описание перед товарами

--- a/index.html
+++ b/index.html
@@ -67,6 +67,17 @@
   <section class="new-section">
     <div class="container">
       <div class="row">
+        <div class="col-md-12">
+          <div class="titie-section">
+            <br><br>
+            <h1>Магазин</h1>
+            <br><br>
+            <h3>Продукты черного тмина — важная часть здорового питания. Если вы давно хотели попробовать масло черного тмина и ощутить его действие на себе — то масло «Доктор Тмин» от Makemi станет для вас идеальным вариантом!</h3>
+            <br><br><br>
+          </div>
+        </div>
+      </div>
+      <div class="row">
 
         <div class="col-md-3">
           <div class="product-item">
@@ -161,28 +172,28 @@
           <div class="service-item">
             <img src="images/m1.png" width="100" height="100" alt="">
             <h3>Полезный продукт — экономия</h3>
-            <p>Благодаря нашим продуктам люди значительно сокращают свои ежемесячные траты на витамины и различные биологические добавки.</p>
+            <h4>Благодаря нашим продуктам люди значительно сокращают свои ежемесячные траты на витамины и различные биологические добавки.</h4>
           </div>
         </div>
         <div class="col-md-3 col-sm-6> ">
           <div class="service-item">
             <img src="images/m2.png" width="100" height="100" alt="">
             <h3>Правильное питание</h3>
-            <p>Вы сможете сэкономить время для достижения нужного результата в области снижения веса, либо наборы массы.</p>
+            <h4>Вы сможете сэкономить время для достижения нужного результата в области снижения веса, либо наборы массы.</h4>
           </div>
         </div>
         <div class="col-md-3 col-sm-6 ">
           <div class="service-item">
             <img src="images/m3.png" width="100" height="100" alt="">
             <h3>Nigela Sativa</h3>
-            <p>По данным последних исследований только эфиопский сорт семян черного тмина Nigella Sativa имеет медицинские свойства. Благодаря использованию именно этого сорта наши продукты оказывают более сильный и быстрый эффект вашему здоровью.</p>
+            <h4>По данным последних исследований только эфиопский сорт семян черного тмина Nigella Sativa имеет медицинские свойства. Благодаря использованию именно этого сорта наши продукты оказывают более сильный и быстрый эффект вашему здоровью.</h4>
           </div>
         </div>
         <div class="col-md-3 col-sm-6 ">
           <div class="service-item">
             <img src="images/m4.png" width="100" height="100" alt="">
             <h3>Первый холодный отжим</h3>
-            <p>Только первый холодный отжим позволяет сохранить все полезные компоненты продукта. Вы платите деньги именно за пользу от продукта, а не просто за масло.</p>
+            <h4>Только первый холодный отжим позволяет сохранить все полезные компоненты продукта. Вы платите деньги именно за пользу от продукта, а не просто за масло.</h4>
           </div>
         </div>
       </div>
@@ -191,28 +202,28 @@
           <div class="service-item">
             <img src="images/m5.png" width="100" height="100" alt="">
             <h3>100% концентрат</h3>
-            <p>Мы не разбавляем свое масло с другими маслами — ваша безопасность для нас важнее. Разбавление масла черного тмина другими растительными маслами неизбежно приводит к снижению концентрации полезных микроэлементов, а в некоторых случаях может нанести вред организму.</p>
+            <h4>Мы не разбавляем свое масло с другими маслами — ваша безопасность для нас важнее. Разбавление масла черного тмина другими растительными маслами неизбежно приводит к снижению концентрации полезных микроэлементов, а в некоторых случаях может нанести вред организму.</h4>
           </div>
         </div>
         <div class="col-md-3 col-sm-6 ">
           <div class="service-item">
             <img src="images/m6.png" width="100" height="100" alt="">
             <h3>Условие хранения</h3>
-            <p>Темное стекло наших бутылок соответствует всем международным стандартам в области хранения лекарств, произведено на заводе в Чехии. Вы получаете всегда свежий продукт, без потери полезных компонентов и с большим сроком годности.</p>
+            <h4>Темное стекло наших бутылок соответствует всем международным стандартам в области хранения лекарств, произведено на заводе в Чехии. Вы получаете всегда свежий продукт, без потери полезных компонентов и с большим сроком годности.</h4>
           </div>
         </div>
         <div class="col-md-3 col-sm-6 ">
           <div class="service-item">
             <img src="images/m7.png" width="100" height="100" alt="">
             <h3>Внешний вид</h3>
-            <p>Специально разработанная упаковка наших продуктов делает их отличным вариантом для подарка близким людям!</p>
+            <h4>Специально разработанная упаковка наших продуктов делает их отличным вариантом для подарка близким людям!</h4>
           </div>
         </div>
         <div class="col-md-3 col-sm-6 ">
           <div class="service-item">
             <img src="images/m8.png" width="100" height="100" alt="">
             <h3>Доставка по всей Беларуси</h3>
-            <p>Только первый холодный отжим позволяет сохранить все полезные компоненты продукта. Вы платите деньги именно за пользу от продукта, а не просто за масло.</p>
+            <h4>Только первый холодный отжим позволяет сохранить все полезные компоненты продукта. Вы платите деньги именно за пользу от продукта, а не просто за масло.</h4>
           </div>
         </div>
       </div>
