--- a/index.html
+++ b/index.html
@@ -284,10 +284,45 @@
         </div>
       </div>
     </div>
-
-
   </section>
 
+
+  <div class="row">
+    <div class="col-sm-12">
+      <div class="titie-section">
+        <h1>Частые вопросы</h1>
+        <div class="align-center">
+          <h3><a href="questions.html">Как пить масло черного тмина?</a><br></h3>
+          <h3><a href="questions.html">Сколько можно хранить масло после вскрытия бутылки?</a><br></h3>
+          <h3><a href="questions.html">Как масло влияет на заболевания поджелудочной железы?</a><br></h3>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-sm-12">
+      <div class="titie-section">
+        <h1>Рекомендации к применению</h1>
+        <div class="align-center">
+          <h3><a href="blog/blog4.html">Применение черного тмина при инфекционных заболеваниях</a></h3>
+          <h3><a href="blog/blog5.html">Применение черного тмина при заболеваниях опорно-двигательной системы</a></h3>
+          <h3><a href="blog/blog6.html">Применение черного тмина при онкологических заболеваниях</a></h3>
+          <h3><a href="blog/blog7.html">Применение черного тмина при кожных заболеваниях</a></h3>
+          <h3><a href="blog/blog8.html">Применение черного тмина при заболеваниях желез внутренних секреций</a></h3>
+          <h3><a href="blog/blog9.html">Применение черного тмина при заболеваниях мочеполовой системы</a></h3>
+          <h3><a href="blog/blog10.html">Применение черного тмина при нарушении обмена веществ</a></h3>
+          <h3><a href="blog/blog11.html">Применение черного тмина при женских заболеваниях</a></h3>
+          <h3><a href="blog/blog12.html">Применение черного тмина при мужских заболеваниях</a></h3>
+          <h3><a href="blog/blog13.html">Применение черного тмина при заболеваниях желудочно-кишечной системы</a></h3>
+          <h3><a href="blog/blog14.html">Применение черного тмина при заболеваниях дыхательной системы</a></h3>
+          <h3><a href="blog/blog15.html">Применение черного тмина при заболеваниях сердечно-сосудистой системы</a></h3>
+          <h3><a href="blog/blog16.html">Применение черного тмина при заболеваниях нервной системы</a></h3>
+          <h3><a href="blog/blog17.html">Применение черного тмина при ЛОР заболеваниях</a></h3>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <section class="news-section">
     <div class="container">
