--- a/index.html
+++ b/index.html
@@ -305,20 +305,20 @@
       <div class="titie-section">
         <h1>Рекомендации к применению</h1>
         <div class="align-center">
-          <h3><a href="blog/blog4.html">Применение черного тмина при инфекционных заболеваниях</a></h3>
-          <h3><a href="blog/blog5.html">Применение черного тмина при заболеваниях опорно-двигательной системы</a></h3>
-          <h3><a href="blog/blog6.html">Применение черного тмина при онкологических заболеваниях</a></h3>
-          <h3><a href="blog/blog7.html">Применение черного тмина при кожных заболеваниях</a></h3>
-          <h3><a href="blog/blog8.html">Применение черного тмина при заболеваниях желез внутренних секреций</a></h3>
-          <h3><a href="blog/blog9.html">Применение черного тмина при заболеваниях мочеполовой системы</a></h3>
-          <h3><a href="blog/blog10.html">Применение черного тмина при нарушении обмена веществ</a></h3>
-          <h3><a href="blog/blog11.html">Применение черного тмина при женских заболеваниях</a></h3>
-          <h3><a href="blog/blog12.html">Применение черного тмина при мужских заболеваниях</a></h3>
-          <h3><a href="blog/blog13.html">Применение черного тмина при заболеваниях желудочно-кишечной системы</a></h3>
-          <h3><a href="blog/blog14.html">Применение черного тмина при заболеваниях дыхательной системы</a></h3>
-          <h3><a href="blog/blog15.html">Применение черного тмина при заболеваниях сердечно-сосудистой системы</a></h3>
-          <h3><a href="blog/blog16.html">Применение черного тмина при заболеваниях нервной системы</a></h3>
-          <h3><a href="blog/blog17.html">Применение черного тмина при ЛОР заболеваниях</a></h3>
+          <h3><a href="blog/blog4.html">Инфекционные заболевания</a></h3>
+          <h3><a href="blog/blog5.html">Заболевания опорно-двигательной системы</a></h3>
+          <h3><a href="blog/blog6.html">Онкологические заболевания</a></h3>
+          <h3><a href="blog/blog7.html">Кожные заболевания</a></h3>
+          <h3><a href="blog/blog8.html">Заболевания желез внутренних секреций</a></h3>
+          <h3><a href="blog/blog9.html">Мочеполовой системы</a></h3>
+          <h3><a href="blog/blog10.html">Нарушение обмена веществ</a></h3>
+          <h3><a href="blog/blog11.html">Женских заболевания</a></h3>
+          <h3><a href="blog/blog12.html">Мужских заболевания</a></h3>
+          <h3><a href="blog/blog13.html">Желудочно-кишечной системы</a></h3>
+          <h3><a href="blog/blog14.html">Дыхательной системы</a></h3>
+          <h3><a href="blog/blog15.html">Сердечно-сосудистой системы</a></h3>
+          <h3><a href="blog/blog16.html">Нервной системы</a></h3>
+          <h3><a href="blog/blog17.html">ЛОР заболеваниях</a></h3>
         </div>
       </div>
     </div>
