--- a/index.html
+++ b/index.html
@@ -287,42 +287,50 @@
   </section>
 
 
-  <div class="row">
-    <div class="col-sm-12">
-      <div class="titie-section">
-        <h1>Частые вопросы</h1>
-        <div class="align-center">
-          <h3><a href="questions.html">Как пить масло черного тмина?</a><br></h3>
-          <h3><a href="questions.html">Сколько можно хранить масло после вскрытия бутылки?</a><br></h3>
-          <h3><a href="questions.html">Как масло влияет на заболевания поджелудочной железы?</a><br></h3>
+  <section class="news-section">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="titie-section">
+            <h1>Частые вопросы</h1>
+            <br>
+            <div class="align-center">
+              <h3><a href="questions.html">Как пить масло черного тмина?</a><br></h3>
+              <h3><a href="questions.html">Сколько можно хранить масло после вскрытия бутылки?</a><br></h3>
+              <h3><a href="questions.html">Как масло влияет на заболевания поджелудочной железы?</a><br></h3>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-  </div>
 
-  <div class="row">
-    <div class="col-sm-12">
-      <div class="titie-section">
-        <h1>Рекомендации к применению</h1>
-        <div class="align-center">
-          <h3><a href="blog/blog4.html">Инфекционные заболевания</a></h3>
-          <h3><a href="blog/blog5.html">Заболевания опорно-двигательной системы</a></h3>
-          <h3><a href="blog/blog6.html">Онкологические заболевания</a></h3>
-          <h3><a href="blog/blog7.html">Кожные заболевания</a></h3>
-          <h3><a href="blog/blog8.html">Заболевания желез внутренних секреций</a></h3>
-          <h3><a href="blog/blog9.html">Мочеполовой системы</a></h3>
-          <h3><a href="blog/blog10.html">Нарушение обмена веществ</a></h3>
-          <h3><a href="blog/blog11.html">Женских заболевания</a></h3>
-          <h3><a href="blog/blog12.html">Мужских заболевания</a></h3>
-          <h3><a href="blog/blog13.html">Желудочно-кишечной системы</a></h3>
-          <h3><a href="blog/blog14.html">Дыхательной системы</a></h3>
-          <h3><a href="blog/blog15.html">Сердечно-сосудистой системы</a></h3>
-          <h3><a href="blog/blog16.html">Нервной системы</a></h3>
-          <h3><a href="blog/blog17.html">ЛОР заболеваниях</a></h3>
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="titie-section">
+            <h1>Рекомендации к применению</h1>
+            <br>
+            <div class="align-center">
+              <h3><a href="blog/blog4.html">Инфекционные заболевания</a></h3>
+              <h3><a href="blog/blog5.html">Заболевания опорно-двигательной системы</a></h3>
+              <h3><a href="blog/blog6.html">Онкологические заболевания</a></h3>
+              <h3><a href="blog/blog7.html">Кожные заболевания</a></h3>
+              <h3><a href="blog/blog8.html">Заболевания желез внутренних секреций</a></h3>
+              <h3><a href="blog/blog9.html">Мочеполовой системы</a></h3>
+              <h3><a href="blog/blog10.html">Нарушение обмена веществ</a></h3>
+              <h3><a href="blog/blog11.html">Женских заболевания</a></h3>
+              <h3><a href="blog/blog12.html">Мужских заболевания</a></h3>
+              <h3><a href="blog/blog13.html">Желудочно-кишечной системы</a></h3>
+              <h3><a href="blog/blog14.html">Дыхательной системы</a></h3>
+              <h3><a href="blog/blog15.html">Сердечно-сосудистой системы</a></h3>
+              <h3><a href="blog/blog16.html">Нервной системы</a></h3>
+              <h3><a href="blog/blog17.html">ЛОР заболеваниях</a></h3>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-  </div>
+  </section>
+
+
 
   <section class="news-section">
     <div class="container">
