--- a/index.html
+++ b/index.html
@@ -327,8 +327,23 @@
           </div>
         </div>
       </div>
+
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="titie-section">
+            <h1>Книга рецептов</h1>
+            <br>
+            <div class="align-center">
+              <h3><a href="kniga.pdf" target="_blank">Книга рецептов масла черного тмина «Доктор Тмин».pdf</a></h3>
+
+            </div>
+          </div>
+        </div>
+      </div>
+
     </div>
   </section>
+
 
 
 
