страница оформления заказа

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
   <meta http-equiv="Cache-Control" content="no-cache">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Отзывы наших покупателей</title>
+  <title>Контакты</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="images/favicon.ico">
@@ -90,6 +90,7 @@
                 </div>
               </div>
             </div>
+
             <div class="row">
               <div class="col-md-12">
                 <div class="input-group">
@@ -97,6 +98,7 @@
                 </div>
               </div>
             </div>
+
           </form><br><br>
         </div><br><br>
       </div><br><br>
