корзина в шапку, плагин шрифтов

--- a/basket.html
+++ b/basket.html
@@ -31,6 +31,9 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="index.html"><b>Cu</b>min</a>
+<ul class="nav navbar-nav navbar-right cart-menu">
+  <li><a href="basket.html"><span class="shoping-cart">Заказ</span></a></li>
+</ul>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
@@ -52,7 +55,7 @@
   <div class="container">
 
     <div class="col-sm-12">
-      <h3>Для оформления заказа выберите товар и количество. Заполните необходимые поля для доставки по почте. Мы перезвоним на указанный номер, для уточнения деталей доставки. Спасибо за покупку! <br><br><br> </h3>
+      <h3>Для оформления заказа введите количество нужного товара. Заполните необходимые поля для доставки по почте. Мы перезвоним на указанный номер, для уточнения деталей доставки. Спасибо за покупку! <br><br><br> </h3>
     </div>
 
     <form action="send_basket.php" method="post" class="basket-form">
