--- a/blog.html
+++ b/blog.html
@@ -32,6 +32,9 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="index.html"><b>Cu</b>min</a>
+<ul class="nav navbar-nav navbar-right cart-menu">
+  <li><a href="basket.html"><span class="shoping-cart">Заказ</span></a></li>
+</ul>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
