--- a/contact.html
+++ b/contact.html
@@ -31,6 +31,9 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="index.html"><b>Cu</b>min</a>
+<ul class="nav navbar-nav navbar-right cart-menu">
+  <li><a href="basket.html"><span class="shoping-cart">Заказ</span></a></li>
+</ul>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
