--- a/product/100g.html
+++ b/product/100g.html
@@ -31,6 +31,9 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="../index.html"><b>Cu</b>min</a>
+          <ul class="nav navbar-nav navbar-right cart-menu">
+            <li><a href="../basket.html"><span class="shoping-cart">Заказ</span></a></li>
+          </ul>
         </div>
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -56,14 +59,14 @@
           <img src="../images/22.jpg" class="img-responsive" alt="">
         </div>
         <div class="col-sm-6">
-            <h2><b>Семена черного тмина 100 гр.</b></h2>
-            <h3>Применение семян растения очень разнообразно. Из них можно делать настои и отвары, измельчать до порошкообразного состояния, а затем смешивать с другими ингредиентами. Также их можно жевать целиком или использовать в качестве наружного средства.</h3>
-            <ul style = "margin-left: 20px" >
-              <h3><li>Эфиопские семена;</li></h3>
-              <h3><li>Сертификация;</li></h3>
-              <h3><li>Собственное производство.</li></h3>
-            </ul>
-            <h3>Товар сертифицирован, соответствует техническому регламенту на масложировую продукцию.</h3>
+          <h2><b>Семена черного тмина 100 гр.</b></h2>
+          <h3>Применение семян растения очень разнообразно. Из них можно делать настои и отвары, измельчать до порошкообразного состояния, а затем смешивать с другими ингредиентами. Также их можно жевать целиком или использовать в качестве наружного средства.</h3>
+          <ul style = "margin-left: 20px" >
+            <h3><li>Эфиопские семена;</li></h3>
+            <h3><li>Сертификация;</li></h3>
+            <h3><li>Собственное производство.</li></h3>
+          </ul>
+          <h3>Товар сертифицирован, соответствует техническому регламенту на масложировую продукцию.</h3>
         </div>
       </div>
     </section>
