--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!doctype html>
 <html class="no-js" lang="ru">
 <head>
+  <title>Масло черного тмина | Cumin - полезные продукты из черного тмина</title>
   <meta http-equiv="Cache-Control" content="no-cache">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Масло черного тмина | Cumin - полезные продукты из черного тмина</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link rel="icon" href="images/favicon.ico">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -31,6 +32,9 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="index.html"><b>Cu</b>min</a>
+          <ul class="nav navbar-nav navbar-right cart-menu">
+            <li><a href="basket.html"><span class="shoping-cart">Заказ</span></a></li>
+          </ul>
         </div>
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -41,8 +45,6 @@
             <li><a href="blog.html">Блог</a></li>
             <li><a href="review.html">Отзывы</a></li>
             <li><a href="contact.html">Контакты</a></li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right cart-menu">
           </ul>
         </div>
       </div>
