иконка корзины в шапку

--- a/polza_tmina.html
+++ b/polza_tmina.html
@@ -31,9 +31,7 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="index.html"><b>Cu</b>min</a>
-<ul class="nav navbar-nav navbar-right cart-menu">
-  <li><a href="basket.html"><span class="shoping-cart">Заказ</span></a></li>
-</ul>
+          <a href="basket.html"><span class="shoping-cart">Заказ</span></a>
         </div>
 
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
