--- a/basket.html
+++ b/basket.html
@@ -31,10 +31,9 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="index.html"><b>Cu</b>min</a>
-<ul class="nav navbar-nav navbar-right cart-menu">
-  <li><a href="basket.html"><span class="shoping-cart">Заказ</span></a></li>
-</ul>
+          <a href="basket.html"><span class="shoping-cart">Заказ</span></a>
         </div>
+
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
             <li><a href="index.html">Магазин</a></li>
@@ -44,11 +43,8 @@
             <li><a href="review.html">Отзывы</a></li>
             <li><a href="contact.html">Контакты</a></li>
           </ul>
-          <ul class="nav navbar-nav navbar-right cart-menu">
-            <!--<li><a href="#"><span> Корзина &nbsp;</span> <span class="shoping-cart">0</span></a></li>-->
-          </ul>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container -->
+        </div>
+      </div>
     </nav>
   </header>
 
