--- a/thanks.html
+++ b/thanks.html
@@ -20,7 +20,7 @@
     </div>
   </div>
 
-  
+
 
   <header class="header-section">
     <nav class="navbar navbar-default">
@@ -34,9 +34,7 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="index.html"><b>Cu</b>min</a>
-<ul class="nav navbar-nav navbar-right cart-menu">
-  <li><a href="basket.html"><span class="shoping-cart">Заказ</span></a></li>
-</ul>
+          <a href="basket.html"><span class="shoping-cart">Заказ</span></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
