--- a/thanks.html
+++ b/thanks.html
@@ -57,24 +57,34 @@
 
   <section class="news-section">
     <div class="container">
-      <div class="row">
-        <div class="col-sm-12">
-        </div>
-      </div>
       <div class="col-sm-12">
         <div >
+          <br><br><br>
           <h1>Спасибо! Мы свяжемся с Вами в ближайшее время.<br><br></h1>  </div>
         </div>
-      </section>
+      </div>
+      <br><br><br><br><br><br><br><br><br>
+    </section>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <p class="center">Copyright &copy;<script>document.write(new Date().getFullYear());</script> Все права защищены | Cumin.by полезная продукция из тмина </a></p>
+
+          </div>
+        </div>
+      </div>
+    </footer>
 
 
 
-      <!-- JQUERY -->
-      <script src="js/vendor/jquery-1.11.2.min.js"></script>
-      <script src="js/vendor/bootstrap.min.js"></script>
-      <script src="js/isotope.pkgd.min.js"></script>
-      <script src="js/owl.carousel.min.js"></script>
-      <script src="js/wow.min.js"></script>
-      <script src="js/custom.js"></script>
-    </body>
-    </html>
+    <!-- JQUERY -->
+    <script src="js/vendor/jquery-1.11.2.min.js"></script>
+    <script src="js/vendor/bootstrap.min.js"></script>
+    <script src="js/isotope.pkgd.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
+    <script src="js/wow.min.js"></script>
+    <script src="js/custom.js"></script>
+  </body>
+  </html>
