исправлена кнопка "купить"

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <div class="carousel-caption">
             <h2>Масло <b>&</b> семена тмина</h2>
             <h3>с доставкой по <Span>Беларуси</Span></h3>
-            <a href="contact.html">Купить</a>
+            <a href="basket.html">Купить</a>
           </div>
         </div>
       </div>
