--- a/product/100ml.html
+++ b/product/100ml.html
@@ -54,7 +54,7 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-6">
-          <img src="../images/1.png" class="img-responsive" alt="">
+          <img src="../images/1.png" class="img-responsive" alt="cumin.by">
         </div>
         <div class="col-sm-6">
             <h2><b>Масло черного тмина 100 мл.</b></h2>
