--- a/production.html
+++ b/production.html
@@ -64,13 +64,13 @@
           <div class="row">
             <div class="col-md-3 col-sm-6 ">
               <div class="service-item">
-                <img src="images/prod1.jpg" class="img-responsive" alt="">
+                <img src="images/prod1.jpg" class="img-responsive" alt="cumin.by">
                 <br>
               </div>
             </div>
             <div class="col-md-3 col-sm-6> ">
               <div class="service-item">
-                <img src="images/prod2.jpg" class="img-responsive" alt="">
+                <img src="images/prod2.jpg" class="img-responsive" alt="cumin.by">
                 <br>
               </div>
             </div>
@@ -79,13 +79,13 @@
           <div class="row">
             <div class="col-md-3 col-sm-6 ">
               <div class="service-item">
-                <img src="images/prod3.jpg" class="img-responsive" alt="">
+                <img src="images/prod3.jpg" class="img-responsive" alt="cumin.by">
                 <br>
               </div>
             </div>
             <div class="col-md-3 col-sm-6> ">
               <div class="service-item">
-                <img src="images/prod4.jpg" class="img-responsive" alt="">
+                <img src="images/prod4.jpg" class="img-responsive" alt="cumin.by">
                 <br>
               </div>
             </div>
@@ -109,7 +109,7 @@
                 <div class="row">
                   <div class="col-md-3 col-sm-6 ">
                     <div class="service-item">
-                      <img src="images/prod5.jpg" class="img-responsive" alt="">
+                      <img src="images/prod5.jpg" class="img-responsive" alt="cumin.by">
                       <br>
                     </div>
                   </div>
