--- a/basket.html
+++ b/basket.html
@@ -58,7 +58,7 @@
 
       <div class="row">
         <div class="col-sm-4">
-          <img src="images/mini4.jpg" class="img-responsive" width="100" height="100" alt="">
+          <img src="images/mini4.jpg" class="img-responsive" width="100" height="100" alt="cumin.by">
         </div>
         <div class="col-sm-4">
           <h3><b>Семена черного тмина 100 гр. (5р)</b></h3>
@@ -74,7 +74,7 @@
 
       <div class="row">
         <div class="col-sm-4">
-          <img src="images/mini1.jpg" class="img-responsive" width="100" height="100" alt="">
+          <img src="images/mini1.jpg" class="img-responsive" width="100" height="100" alt="cumin.by">
         </div>
         <div class="col-sm-4">
           <h3><b>Масло черного тмина 100 мл. (19р)</b></h3>
@@ -90,7 +90,7 @@
 
       <div class="row">
         <div class="col-sm-4">
-          <img src="images/mini2.jpg" class="img-responsive" width="100" height="100" alt="">
+          <img src="images/mini2.jpg" class="img-responsive" width="100" height="100" alt="cumin.by">
         </div>
         <div class="col-sm-4">
           <h3><b>Масло черного тмина 250 мл. (46р)</b></h3>
@@ -106,7 +106,7 @@
 
       <div class="row">
         <div class="col-sm-4">
-          <img src="images/mini3.jpg" class="img-responsive" width="100" height="100" alt="">
+          <img src="images/mini3.jpg" class="img-responsive" width="100" height="100" alt="cumin.by">
         </div>
         <div class="col-sm-4">
           <h3><b>Масло черного тмина 500 мл. (86р)</b></h3>
