--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img src="images/slider5.jpg" alt="">
+          <img src="images/slider5.jpg" alt="cumin.by">
           <div class="carousel-caption">
             <h2>Масло <b>&</b> семена тмина</h2>
             <h3>с доставкой по <Span>Беларуси</Span></h3>
@@ -81,7 +81,7 @@
 
         <div class="col-md-3">
           <div class="product-item">
-            <a href="product/100g.html"><img src="images/4.png" class="img-responsive" width="255" height="322" alt=""></a>
+            <a href="product/100g.html"><img src="images/4.png" class="img-responsive" width="255" height="322" alt="cumin.by"></a>
             <div class="product-title">
               <a href="product/100g.html"><h3>Семена черного тмина 100 гр.</h3></a>
               <a href="product/100g.html"><span>5р</span></a>
@@ -99,7 +99,7 @@
 
         <div class="col-md-3">
           <div class="product-item">
-            <a href="product/100ml.html"><img src="images/1.png" class="img-responsive" width="255" height="322" alt=""></a>
+            <a href="product/100ml.html"><img src="images/1.png" class="img-responsive" width="255" height="322" alt="cumin.by"></a>
             <div class="product-title">
               <a href="product/100ml.html"><h3>Масло черного тмина 100 мл.</h3></a>
               <a href="product/100ml.html"><span>19р</span></a>
@@ -117,7 +117,7 @@
 
         <div class="col-md-3">
           <div class="product-item">
-            <a href="product/250ml.html"><img src="images/2.png" class="img-responsive" width="255" height="322" alt=""></a>
+            <a href="product/250ml.html"><img src="images/2.png" class="img-responsive" width="255" height="322" alt="cumin.by"></a>
             <div class="product-title">
               <a href="product-title"><h3>Масло черного тмина 250 мл.</h3></a>
               <a href="product-title"><span>46р</span></a>
@@ -135,7 +135,7 @@
 
         <div class="col-md-3">
           <div class="product-item">
-            <a href="product/500ml.html"><img src="images/3.png" class="img-responsive" width="255" height="322" alt=""></a>
+            <a href="product/500ml.html"><img src="images/3.png" class="img-responsive" width="255" height="322" alt="cumin.by"></a>
             <div class="product-title">
               <a href="product/500ml.html"><h3>Масло черного тмина 500 мл.</h3></a>
               <a href="product/500ml.html"><span>86р</span></a>
@@ -147,6 +147,9 @@
               <div>
                 <a href="product/500ml.html">Подробнее</a>
               </div>
+            </div>
+            <div class="blog-item">
+
             </div>
           </div>
         </div>
@@ -170,28 +173,28 @@
       <div class="row">
         <div class="col-md-3 col-sm-6 ">
           <div class="service-item">
-            <img src="images/m1.png" width="100" height="100" alt="">
+            <img src="images/m1.png" width="100" height="100" alt="cumin.by">
             <h3>Полезный продукт — экономия</h3>
             <h4>Благодаря нашим продуктам люди значительно сокращают свои ежемесячные траты на витамины и различные биологические добавки.</h4>
           </div>
         </div>
         <div class="col-md-3 col-sm-6> ">
           <div class="service-item">
-            <img src="images/m2.png" width="100" height="100" alt="">
+            <img src="images/m2.png" width="100" height="100" alt="cumin.by">
             <h3>Правильное питание</h3>
             <h4>Вы сможете сэкономить время для достижения нужного результата в области снижения веса, либо наборы массы.</h4>
           </div>
         </div>
         <div class="col-md-3 col-sm-6 ">
           <div class="service-item">
-            <img src="images/m3.png" width="100" height="100" alt="">
+            <img src="images/m3.png" width="100" height="100" alt="cumin.by">
             <h3>Nigela Sativa</h3>
             <h4>По данным последних исследований только эфиопский сорт семян черного тмина Nigella Sativa имеет медицинские свойства. Благодаря использованию именно этого сорта наши продукты оказывают более сильный и быстрый эффект вашему здоровью.</h4>
           </div>
         </div>
         <div class="col-md-3 col-sm-6 ">
           <div class="service-item">
-            <img src="images/m4.png" width="100" height="100" alt="">
+            <img src="images/m4.png" width="100" height="100" alt="cumin.by">
             <h3>Первый холодный отжим</h3>
             <h4>Только первый холодный отжим позволяет сохранить все полезные компоненты продукта. Вы платите деньги именно за пользу от продукта, а не просто за масло.</h4>
           </div>
@@ -200,30 +203,30 @@
       <div class="row">
         <div class="col-md-3 col-sm-6 ">
           <div class="service-item">
-            <img src="images/m5.png" width="100" height="100" alt="">
+            <img src="images/m5.png" width="100" height="100" alt="cumin.by">
             <h3>100% концентрат</h3>
             <h4>Мы не разбавляем свое масло с другими маслами — ваша безопасность для нас важнее. Разбавление масла черного тмина другими растительными маслами неизбежно приводит к снижению концентрации полезных микроэлементов, а в некоторых случаях может нанести вред организму.</h4>
           </div>
         </div>
         <div class="col-md-3 col-sm-6 ">
           <div class="service-item">
-            <img src="images/m6.png" width="100" height="100" alt="">
+            <img src="images/m6.png" width="100" height="100" alt="cumin.by">
             <h3>Условие хранения</h3>
             <h4>Темное стекло наших бутылок соответствует всем международным стандартам в области хранения лекарств, произведено на заводе в Чехии. Вы получаете всегда свежий продукт, без потери полезных компонентов и с большим сроком годности.</h4>
           </div>
         </div>
         <div class="col-md-3 col-sm-6 ">
           <div class="service-item">
-            <img src="images/m7.png" width="100" height="100" alt="">
+            <img src="images/m7.png" width="100" height="100" alt="cumin.by">
             <h3>Внешний вид</h3>
             <h4>Специально разработанная упаковка наших продуктов делает их отличным вариантом для подарка близким людям!</h4>
           </div>
         </div>
         <div class="col-md-3 col-sm-6 ">
           <div class="service-item">
-            <img src="images/m8.png" width="100" height="100" alt="">
+            <img src="images/m8.png" width="100" height="100" alt="cumin.by">
             <h3>Доставка по всей Беларуси</h3>
-            <h4>Только первый холодный отжим позволяет сохранить все полезные компоненты продукта. Вы платите деньги именно за пользу от продукта, а не просто за масло.</h4>
+            <h4>Доставка осуществляется белпочтой в любую точку страны. </h4>
           </div>
         </div>
       </div>
@@ -359,7 +362,7 @@
       <div class="row" >
         <div class="col-sm-4">
           <div class="blog-item">
-            <a href="blog/blog1.html"><img src="images/blog1.jpg" width="350" height="262" alt=""></a>
+            <a href="blog/blog1.html"><img src="images/blog1.jpg" width="350" height="262" alt="cumin.by"></a>
             <h3>Почему масло должно быть неразбавленным</h3>
             <p>Масло черного тмина полезно в своем первозданном, неразбавленном виде — именно на неразбавленное масло рассчитаны все рецепты по его употреблению. Дело в том, что, к сожалению, многие производители в целях экономии стали разбавлять свою продукцию другими растительными маслами, а это приводит к следующим последствиям:</p>
             <a href="blog/blog1.html">Читать далее</a>
@@ -367,7 +370,7 @@
         </div>
         <div class="col-sm-4">
           <div class="blog-item">
-            <a href="blog/blog2.html"><img src="images/blog2.jpg" width="350" height="262" alt=""></a>
+            <a href="blog/blog2.html"><img src="images/blog2.jpg" width="350" height="262" alt="cumin.by"></a>
             <h3>Про сертификат происхождения семян</h3>
             <p>Существуют разные сорта тмина. Насыщенность семян черного тмина полезными микроэлементами во многом зависит от места его произрастания. Наиболее удачное сочетание климатических условий для выращивания семян тмина, обладающих медицинскими свойствами, это:</p>
             <a href="blog/blog2.html">Читать далее</a>
@@ -376,7 +379,7 @@
         </div>
         <div class="col-sm-4">
           <div class="blog-item">
-            <a href="blog/blog3.html"><img src="images/blog3.jpg" width="350" height="262" alt=""></a>
+            <a href="blog/blog3.html"><img src="images/blog3.jpg" width="350" height="262" alt="cumin.by"></a>
             <h3>Первый холодный отжим</h3>
             <p>В случае с черным тмином очень важно, чтобы масло было получено именно путем первого холодного отжима — только так можно максимально сохранить его полезные свойства. Дело в том, что при горячем отжиме прессованию предшествует этап обработки семян в жаровнях — измельченные семена с добавлением воды обжаривают при температуре 100-110⁰С, после чего уже отжимают. </p>
             <a href="blog/blog3.html">Читать далее</a>
@@ -412,35 +415,35 @@
       <div class="row">
         <div class="col-md-12 col-sm-12 ">
           <div class="service-item">
-            <img src="images/sh-1.png" width="100" height="100" alt="">
+            <img src="images/sh-1.png" width="100" height="100" alt="cumin.by">
             <h3>Заказ товара на сайте</h3>
           </div>
         </div>
 
         <div class="col-md-12 col-sm-12> ">
           <div class="service-item">
-            <img src="images/sh-2.png" width="100" height="100" alt="">
+            <img src="images/sh-2.png" width="100" height="100" alt="cumin.by">
             <h3>Подтверждение заказа</h3>
           </div>
         </div>
 
         <div class="col-md-12 col-sm-12 ">
           <div class="service-item">
-            <img src="images/sh-3.png" width="100" height="100" alt="">
+            <img src="images/sh-3.png" width="100" height="100" alt="cumin.by">
             <h3>Выбор способа доставки</h3>
           </div>
         </div>
 
         <div class="col-md-12 col-sm-12 ">
           <div class="service-item">
-            <img src="images/sh-5.png" width="100" height="100" alt="">
+            <img src="images/sh-5.png" width="100" height="100" alt="cumin.by">
             <h3>Отправка заказа со склада</h3>
           </div>
         </div>
 
         <div class="col-md-12 col-sm-12 ">
           <div class="service-item">
-            <img src="images/m6.png" width="100" height="100" alt="">
+            <img src="images/m6.png" width="100" height="100" alt="cumin.by">
             <h3>Получение заказа и оплата</h3>
           </div>
         </div>
