--- a/polza_tmina.html
+++ b/polza_tmina.html
@@ -55,7 +55,7 @@
       <div class="col-sm-12">
           <h3> В последние годы значительно возрос интерес к лечению лекарственными растениями, т.е. фитотерапии. Например, в Германии 80% врачей всех специальности постоянно применяют в своей практике средства растительного происхождения, более 80% больных во всех странах хотя бы однажды лечились фитопрепаратами. Наиболее распространенным и широко применяемым в народной медицине во многих странах является черный тмин. В течении многих веков черный тмин в виде семян и масла широко используется миллионами людей во всем мире, особенно в странах Азии, Африки, на Ближнем Востоке как эффективное средство против многих заболеваний. В последние годы большое внимание на Западе уделяют исследованию чёрного тмина при лечении рака и СПИДа. <br><br></h3>
 
-          <img src="images/polza1.jpg" class="img-responsive" alt="">
+          <img src="images/polza1.jpg" class="img-responsive" alt="cumin.by">
 
           <h1>Биология черного тмина <br><br></h1>
 
